--- a/src/components/ModalWrapper/ModalWrapper.scss
+++ b/src/components/ModalWrapper/ModalWrapper.scss
@@ -15,6 +15,26 @@ $modal-overlay-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   background-color: $modal-overlay-color;
   overscroll-behavior: contain;
+  z-index: 20;
+  pointer-events: none;
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    cursor: default;
+
+    &.can-click {
+      pointer-events: auto;
+    }
+  }
+
+  .container {
+    position: absolute;
+    pointer-events: auto;
+  }
 }
 
 
