feat: update rotate3D

--- a/src/components/LoadingModal/LoadingModal.scss
+++ b/src/components/LoadingModal/LoadingModal.scss
@@ -15,7 +15,7 @@
 }
 
 .blue {
-  animation: spin3D 3s linear .2s infinite;
+  animation: spin3D 3s linear 0.2s infinite;
   @apply w-[165px] h-[165px] border border-[#91daff];
 }
 
@@ -39,18 +39,18 @@
 }
 
 .w2 {
-  transform: rotate3d(1, 2, .5, 90deg);
+  transform: rotate3d(1, 2, 0.5, 90deg);
 }
 
 .w3 {
-  transform: rotate3d(.5, 1, 2, 90deg);
+  transform: rotate3d(0.5, 1, 2, 90deg);
 }
 
 @keyframes spin3D {
   from {
-    transform: rotate3d(.5,.5,.5, 360deg);
+    transform: rotate3d(0.5, 0.5, 0.5, 360deg);
   }
-  to{
-    transform: rotate3d(0deg);
+  to {
+    transform: rotate3d(1, 1, 1, 0deg);
   }
 }
