--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;900&display=swap');
 
 html,body,*,*::after,*::before {
+  scroll-behavior: smooth;
   @apply text-gray-1200 text-base font-sans leading-tight box-border duration-300;
 }
 
