--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -28,6 +28,11 @@ input:-webkit-autofill:active  {
 } 
 
 @layer components {
+  .text-overflow {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
   .login-line {
     @apply relative top-1 w-5 h-0.5 bg-primary-500 mr-2 rotate-[70deg] before:w-2 before:h-2 before:rounded-full before:bg-primary-500 before:absolute before:-top-[3px] before:-left-[6px];
   }
