--- a/src/components/tailwind.css
+++ b/src/components/tailwind.css
@@ -8,7 +8,9 @@ html,body,*,*::after,*::before {
   scroll-behavior: smooth;
   @apply text-gray-1200 text-base font-sans leading-tight box-border duration-300;
 }
-
+html,body{
+ overflow-x: hidden;
+}
 
 img {
   @apply object-cover;
@@ -31,6 +33,9 @@ input:-webkit-autofill:active  {
     &:nth-last-child(2){
       border:none
     }
+  }
+  .min-h-mobile {
+    min-height:calc(100vh - 120px);
   }
 }
 @layer components {
