--- a/src/components/ModalWrapper/ModalWrapper.scss
+++ b/src/components/ModalWrapper/ModalWrapper.scss
@@ -1,9 +1,5 @@
 $modal-overlay-color: rgba(0, 0, 0, 0.6);
 
-:global(.Body--Modal-open-disable-scroll) {
-  overflow: hidden;
-}
-
 .root {
   position: fixed;
   top: 0;
@@ -15,7 +11,7 @@ $modal-overlay-color: rgba(0, 0, 0, 0.6);
   justify-content: center;
   background-color: $modal-overlay-color;
   overscroll-behavior: contain;
-  z-index: 20;
+  z-index: 40;
   pointer-events: none;
 
   .overlay {
@@ -33,7 +29,11 @@ $modal-overlay-color: rgba(0, 0, 0, 0.6);
   }
 
   .container {
-    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     pointer-events: auto;
   }
 }
