--- a/src/components/ScrollView/ScrollView.scss
+++ b/src/components/ScrollView/ScrollView.scss
@@ -1,4 +1,3 @@
-
 [data-layout='mobile'] {
   .root {
     -webkit-scrollbar-color: dark;
@@ -24,4 +23,8 @@
 .scrollbar-y-hide {
   overflow-y: hidden !important;
   margin-right: 0 !important;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
