--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -6,6 +6,9 @@
   .bg {
     @apply bg-[url('./assets/darkbg.png')];
   }
+  .bg-img {
+    @apply bg-[url('./assets/darkbg.png')];
+  }
 }
 
 .bg-img {
