--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -1,3 +1,20 @@
 .bg-img {
   @apply bg-[url('./assets/bg.png')] bg-no-repeat bg-cover;
 }
+.icon {
+  @apply mr-2;
+}
+
+:global(.dark) {
+  .bg-img {
+    @apply bg-[url('./assets/darkbg.png')];
+  }
+  .icon {
+    path {
+      @apply fill-white/80;
+    }
+  }
+  .darkIcon {
+    filter: brightness(1.5);
+  }
+}
