--- a/src/components/ProfileHeader/ProfileHeader.scss
+++ b/src/components/ProfileHeader/ProfileHeader.scss
@@ -10,6 +10,29 @@
     backdrop-filter: blur(5px);
   }
 }
+:global(.dark) {
+  .cover {
+    &::before {
+      background-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0),
+        #1c1826 80%
+      );
+      backdrop-filter: blur(5px);
+    }
+  }
+  .default-cover {
+    @apply bg-dark-primary-600/40;
+
+    &::before {
+      background-image: linear-gradient(
+        to top,
+        rgba(255, 255, 255, 0),
+        rgba(#1c1826, 0.8)
+      );
+    }
+  }
+}
 
 .default-cover {
   @apply bg-primary-50;
